--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,9 @@ body {
     padding: 30px;
     border-radius: 12px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-    max-width: 400px;
-    width: 90%;
+    max-width: 440px;
+    width: 100%;
+    /* width: fit-content; */
 }
 
 h1 {
@@ -85,6 +86,46 @@ button:hover {
     border-radius: 6px;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
+/* Basic styling for the result */
+#result {
+    font-family: 'Helvetica Neue', sans-serif;
+    margin-top: 20px;
+    font-size: 16px;
+    text-align: center;
+    color: #333;
+    background-color: #ecf0f1;
+    padding: 15px;
+    border-radius: 6px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    /* width added */
+
+     /* Changed from fit-content to 100% */
+
+}
+
+/* Highlight the percentages */
+#result span.percentage {
+    font-weight: bold;
+    color: #2c3e50;
+    font-size: 1.1em;
+    padding: 2px 4px;
+    border-radius: 4px;
+}
+
+/* Styling for important messages */
+#result .important-info {
+    font-weight: bold;
+    color: #4e555b;
+    font-size: 1.13em;
+}
+
+/* Emphasize class count with a contrasting color */
+#result .class-count {
+    font-weight:bolder;
+    color: #263c6d; /* Contrasting green */
+    font-size: 1em;
+}
+
 .logo-container {
     text-align: center;
     
